Shortened verbose text for compact display.

--- a/IDE/public/belaDiagram/json/data_ctag_BEAST_slave.json
+++ b/IDE/public/belaDiagram/json/data_ctag_BEAST_slave.json
@@ -5,7 +5,7 @@
       "y": "329",
       "width": "10",
       "height": "10",
-      "text": "Pin P8_08 - Digital 1 - (Pd: digital 18)",
+      "text": "Digital 1 (Pd: 18)",
       "tip": "tooltip"
     },
     {
@@ -14,7 +14,7 @@
       "y": "329",
       "width": "10",
       "height": "10",
-      "text": "Pin P8_07 - Digital 0 - (Pd: digital 17)",
+      "text": "Digital 0 (Pd: 17)",
       "tip": "tooltip"
     },
     {
@@ -23,7 +23,7 @@
       "y": "315",
       "width": "10",
       "height": "10",
-      "text": "Pin P8_10 - Digital 3 - (Pd: digital 20)",
+      "text": "Digital 3 (Pd: 20)",
       "tip": "tooltip"
     },
     {
@@ -32,7 +32,7 @@
       "y": "315",
       "width": "10",
       "height": "10",
-      "text": "Pin P8_09 - Digital 2 - (Pd: digital 19)",
+      "text": "Digital 2 (Pd: 19)",
       "tip": "tooltip"
     },
     {
@@ -41,7 +41,7 @@
       "y": "301",
       "width": "10",
       "height": "10",
-      "text": "Pin P8_12 - Digital 5 - (Pd: digital 22)",
+      "text": "Digital 5 (Pd: 22)",
       "tip": "tooltip"
     },
     {
@@ -50,7 +50,7 @@
       "y": "301",
       "width": "10",
       "height": "10",
-      "text": "Pin P8_11 - Digital 4 - (Pd: digital 21)",
+      "text": "Digital 4 (Pd: 21)",
       "tip": "tooltip"
     },
     {
@@ -59,7 +59,7 @@
       "y": "275",
       "width": "10",
       "height": "10",
-      "text": "Pin P8_16 - Digital 9 - (Pd: digital 26)",
+      "text": "Digital 9 (Pd: 26)",
       "tip": "tooltip"
     },
     {
@@ -68,7 +68,7 @@
       "y": "275",
       "width": "10",
       "height": "10",
-      "text": "Pin P8_15 - Digital 8 - (Pd: digital 25)",
+      "text": "Digital 8 (Pd: 25)",
       "tip": "tooltip"
     },
     {
@@ -77,7 +77,7 @@
       "y": "261",
       "width": "10",
       "height": "10",
-      "text": "Pin P8_18 - Digital 11 - (Pd: digital 28)",
+      "text": "Digital 11 (Pd: 28)",
       "tip": "tooltip"
     },
     {
@@ -86,7 +86,7 @@
       "y": "193",
       "width": "10",
       "height": "10",
-      "text": "Pin P8_28 - Digital 13 - (Pd: digital 30)",
+      "text": "Digital 13 (Pd: 30)",
       "tip": "tooltip"
     },
     {
@@ -95,7 +95,7 @@
       "y": "193",
       "width": "10",
       "height": "10",
-      "text": "Pin P8_27 - Digital 12 - (Pd: digital 29)",
+      "text": "Digital 12 (Pd: 29)",
       "tip": "tooltip"
     },
     {
@@ -104,7 +104,7 @@
       "y": "179",
       "width": "10",
       "height": "10",
-      "text": "Pin P8_30 - Digital 15 - (Pd: digital 32)",
+      "text": "Digital 15 (Pd: 32)",
       "tip": "tooltip"
     },
     {
@@ -113,7 +113,7 @@
       "y": "179",
       "width": "10",
       "height": "10",
-      "text": "Pin P8_29 - Digital 14 - (Pd: digital 31)",
+      "text": "Digital 14 (Pd: 31)",
       "tip": "tooltip"
     },
     {
@@ -122,7 +122,7 @@
       "y": "370",
       "width": "10",
       "height": "10",
-      "text": "Pin P9_02 - GND",
+      "text": "GND",
       "tip": "tooltip"
     },
     {
@@ -131,7 +131,7 @@
       "y": "370",
       "width": "10",
       "height": "10",
-      "text": "Pin P9_01 - GND",
+      "text": "GND",
       "tip": "tooltip"
     },
     {
@@ -140,7 +140,7 @@
       "y": "356",
       "width": "10",
       "height": "10",
-      "text": "Pin P9_03 - 3.3V supply",
+      "text": "3.3V",
       "tip": "tooltip"
     },
     {
@@ -149,7 +149,7 @@
       "y": "356",
       "width": "10",
       "height": "10",
-      "text": "Pin P9_04 - 3.3V supply",
+      "text": "3.3V",
       "tip": "tooltip"
     },
     {
@@ -158,7 +158,7 @@
       "y": "370",
       "width": "10",
       "height": "10",
-      "text": "Pin P8_02 - GND",
+      "text": "GND",
       "tip": "tooltip"
     },
     {
@@ -167,7 +167,7 @@
       "y": "370",
       "width": "10",
       "height": "10",
-      "text": "Pin P8_01 - GND",
+      "text": "GND",
       "tip": "tooltip"
     },
     {
@@ -176,7 +176,7 @@
       "y": "303",
       "width": "10",
       "height": "10",
-      "text": "Pin P9_12 - Digital 6 - (Pd: digital 23)",
+      "text": "Digital 6 (Pd: 23)",
       "tip": "tooltip"
     },
     {
@@ -185,7 +185,7 @@
       "y": "289",
       "width": "10",
       "height": "10",
-      "text": "Pin P9_14 - Digital 7 - (Pd: digital 24)",
+      "text": "Digital 7 (Pd: 24)",
       "tip": "tooltip"
     },
     {
@@ -194,7 +194,7 @@
       "y": "275",
       "width": "10",
       "height": "10",
-      "text": "Pin P9_16 - Digital 10 - (Pd: digital 27)",
+      "text": "Digital 10 (Pd: 27)",
       "tip": "tooltip"
     },
     {
@@ -329,7 +329,7 @@
       "y": "-149",
       "width": "9",
       "height": "9",
-      "text": "OUT 7 - (Pd:[dac~ 8])",
+      "text": "OUT 7 (Pd:[dac~ 8])",
       "tip": "tooltip"
     },
     {
@@ -338,7 +338,7 @@
       "y": "-149",
       "width": "9",
       "height": "9",
-      "text": "OUT 6 - (Pd:[dac~ 7])",
+      "text": "OUT 6 (Pd:[dac~ 7])",
       "tip": "tooltip"
     },
     {
@@ -356,7 +356,7 @@
       "y": "-149",
       "width": "9",
       "height": "9",
-      "text": "OUT 4 - (Pd:[dac~ 5])",
+      "text": "OUT 4 (Pd:[dac~ 5])",
       "tip": "tooltip"
     },
     {
@@ -365,7 +365,7 @@
       "y": "-149",
       "width": "9",
       "height": "9",
-      "text": "OUT 5 - (Pd:[dac~ 6])",
+      "text": "OUT 5 (Pd:[dac~ 6])",
       "tip": "tooltip"
     },
     {
@@ -383,7 +383,7 @@
       "y": "-149",
       "width": "9",
       "height": "9",
-      "text": "OUT 2 - (Pd:[dac~ 3])",
+      "text": "OUT 2 (Pd:[dac~ 3])",
       "tip": "tooltip"
     },
     {
@@ -392,7 +392,7 @@
       "y": "-149",
       "width": "9",
       "height": "9",
-      "text": "OUT 3 - (Pd:[dac~ 4])",
+      "text": "OUT 3 (Pd:[dac~ 4])",
       "tip": "tooltip"
     },
     {
@@ -410,7 +410,7 @@
       "y": "-149",
       "width": "9",
       "height": "9",
-      "text": "OUT 0 - (Pd:[dac~ 1])",
+      "text": "OUT 0 (Pd:[dac~ 1])",
       "tip": "tooltip"
     },
     {
@@ -419,7 +419,7 @@
       "y": "-149",
       "width": "9",
       "height": "9",
-      "text": "OUT 1 - (Pd:[dac~ 2])",
+      "text": "OUT 1 (Pd:[dac~ 2])",
       "tip": "tooltip"
     },
     {
@@ -437,7 +437,7 @@
       "y": "-149",
       "width": "9",
       "height": "9",
-      "text": "IN 0 - (Pd:[adc~ 1])",
+      "text": "IN 0 (Pd:[adc~ 1])",
       "tip": "tooltip"
     },
     {
@@ -446,7 +446,7 @@
       "y": "-149",
       "width": "9",
       "height": "9",
-      "text": "IN 1 - (Pd:[adc~ 2])",
+      "text": "IN 1 (Pd:[adc~ 2])",
       "tip": "tooltip"
     },
     {
@@ -464,7 +464,7 @@
       "y": "-186",
       "width": "9",
       "height": "9",
-      "text": "IN 2 - (Pd:[adc~ 3])",
+      "text": "IN 2 (Pd:[adc~ 3])",
       "tip": "tooltip"
     },
     {
@@ -473,7 +473,7 @@
       "y": "-186",
       "width": "9",
       "height": "9",
-      "text": "IN 3 - (Pd:[adc~ 4])",
+      "text": "IN 3 (Pd:[adc~ 4])",
       "tip": "tooltip"
     },
     {
@@ -491,7 +491,7 @@
       "y": "-228",
       "width": "9",
       "height": "9",
-      "text": "OUT 14 - (Pd:[dac~ 15])",
+      "text": "OUT 14 (Pd:[dac~ 15])",
       "tip": "tooltip"
     },
     {
@@ -500,7 +500,7 @@
       "y": "-228",
       "width": "9",
       "height": "9",
-      "text": "OUT 15 - (Pd:[dac~ 16])",
+      "text": "OUT 15 (Pd:[dac~ 16])",
       "tip": "tooltip"
     },
     {
@@ -518,7 +518,7 @@
       "y": "-228",
       "width": "9",
       "height": "9",
-      "text": "OUT 12 - (Pd:[dac~ 13])",
+      "text": "OUT 12 (Pd:[dac~ 13])",
       "tip": "tooltip"
     },
     {
@@ -527,7 +527,7 @@
       "y": "-228",
       "width": "9",
       "height": "9",
-      "text": "OUT 13 - (Pd:[dac~ 14])",
+      "text": "OUT 13 (Pd:[dac~ 14])",
       "tip": "tooltip"
     },
     {
@@ -545,7 +545,7 @@
       "y": "-228",
       "width": "9",
       "height": "9",
-      "text": "OUT 10 - (Pd:[dac~ 11])",
+      "text": "OUT 10 (Pd:[dac~ 11])",
       "tip": "tooltip"
     },
     {
@@ -554,7 +554,7 @@
       "y": "-228",
       "width": "9",
       "height": "9",
-      "text": "OUT 11 - (Pd:[dac~ 12])",
+      "text": "OUT 11 (Pd:[dac~ 12])",
       "tip": "tooltip"
     },
     {
@@ -572,7 +572,7 @@
       "y": "-228",
       "width": "9",
       "height": "9",
-      "text": "OUT 8 - (Pd:[dac~ 9])",
+      "text": "OUT 8 (Pd:[dac~ 9])",
       "tip": "tooltip"
     },
     {
@@ -581,7 +581,7 @@
       "y": "-228",
       "width": "9",
       "height": "9",
-      "text": "OUT 9 - (Pd:[dac~ 10])",
+      "text": "OUT 9 (Pd:[dac~ 10])",
       "tip": "tooltip"
     },
     {
@@ -599,7 +599,7 @@
       "y": "-228",
       "width": "9",
       "height": "9",
-      "text": "IN 4 - (Pd:[adc~ 5])",
+      "text": "IN 4 (Pd:[adc~ 5])",
       "tip": "tooltip"
     },
     {
@@ -608,7 +608,7 @@
       "y": "-228",
       "width": "9",
       "height": "9",
-      "text": "IN 5 - (Pd:[adc~ 6])",
+      "text": "IN 5 (Pd:[adc~ 6])",
       "tip": "tooltip"
     },
     {
@@ -626,7 +626,7 @@
       "y": "-266",
       "width": "9",
       "height": "9",
-      "text": "IN 6 - (Pd:[adc~ 7])",
+      "text": "IN 6 (Pd:[adc~ 7])",
       "tip": "tooltip"
     },
     {
@@ -635,7 +635,7 @@
       "y": "-266",
       "width": "9",
       "height": "9",
-      "text": "IN 7 - (Pd:[adc~ 8])",
+      "text": "IN 7 (Pd:[adc~ 8])",
       "tip": "tooltip"
     },
     {
@@ -653,7 +653,7 @@
       "y": "430",
       "width": "09",
       "height": "15",
-      "text": "LED - provides system heartbeat blink",
+      "text": "System LED",
       "tip": "tooltip"
     },
     {
@@ -671,7 +671,7 @@
       "y": "430",
       "width": "09",
       "height": "15",
-      "text": "LED - Blinks when Bela program is running",
+      "text": "LED (Blinks when running program)",
       "tip": "tooltip"
     },
     {
@@ -680,7 +680,7 @@
       "y": "404",
       "width": "15",
       "height": "23",
-      "text": "BeagleBone reset button",
+      "text": "Reset button",
       "tip": "tooltip"
     },
     {
@@ -716,7 +716,7 @@
       "y": "196",
       "width": "10",
       "height": "23",
-      "text": "jumper",
+      "text": "Jumper",
       "tip": "tooltip"
     },
     {
@@ -725,7 +725,7 @@
       "y": "235",
       "width": "10",
       "height": "23",
-      "text": "jumper",
+      "text": "Jumper",
       "tip": "tooltip"
     },
     {
@@ -734,7 +734,7 @@
       "y": "235",
       "width": "10",
       "height": "23",
-      "text": "jumper",
+      "text": "Jumper",
       "tip": "tooltip"
     },
     {
@@ -743,7 +743,7 @@
       "y": "209",
       "width": "10",
       "height": "23",
-      "text": "jumper",
+      "text": "Jumper",
       "tip": "tooltip"
     },
     {
@@ -752,7 +752,7 @@
       "y": "209",
       "width": "10",
       "height": "23",
-      "text": "jumper",
+      "text": "Jumper",
       "tip": "tooltip"
     },
     {
@@ -779,7 +779,7 @@
       "y": "213",
       "width": "12",
       "height": "27",
-      "text": "jumper",
+      "text": "Jumper",
       "tip": "tooltip"
     }
   ]
