--- a/IDE/public/belaDiagram/json/data_ctag_BEAST_BELA.json
+++ b/IDE/public/belaDiagram/json/data_ctag_BEAST_BELA.json
@@ -5,7 +5,7 @@
       "y": "323",
       "width": "10",
       "height": "10",
-      "text": "Pin P8_08 - Digital 1 - (Pd: digital 26)",
+      "text": "Digital 1 (Pd: 26)",
       "tip": "tooltip"
     },
     {
@@ -14,7 +14,7 @@
       "y": "323",
       "width": "10",
       "height": "10",
-      "text": "Pin P8_07 - Digital 0 - (Pd: digital 25)",
+      "text": "Digital 0 (Pd: 25)",
       "tip": "tooltip"
     },
     {
@@ -23,7 +23,7 @@
       "y": "309",
       "width": "10",
       "height": "10",
-      "text": "Pin P8_10 - Digital 3 - (Pd: digital 28)",
+      "text": "Digital 3 (Pd: 28)",
       "tip": "tooltip"
     },
     {
@@ -32,7 +32,7 @@
       "y": "309",
       "width": "10",
       "height": "10",
-      "text": "Pin P8_09 - Digital 2 - (Pd: digital 27)",
+      "text": "Digital 2 (Pd: 27)",
       "tip": "tooltip"
     },
     {
@@ -41,7 +41,7 @@
       "y": "295",
       "width": "10",
       "height": "10",
-      "text": "Pin P8_12 - Digital 5 - (Pd: digital 30)",
+      "text": "Digital 5 (Pd: 30)",
       "tip": "tooltip"
     },
     {
@@ -50,7 +50,7 @@
       "y": "295",
       "width": "10",
       "height": "10",
-      "text": "Pin P8_11 - Digital 4 - (Pd: digital 29)",
+      "text": "Digital 4 (Pd: 29)",
       "tip": "tooltip"
     },
     {
@@ -59,7 +59,7 @@
       "y": "267",
       "width": "10",
       "height": "10",
-      "text": "Pin P8_16 - Digital 9 - (Pd: digital 34)",
+      "text": "Digital 9 (Pd: 34)",
       "tip": "tooltip"
     },
     {
@@ -68,7 +68,7 @@
       "y": "267",
       "width": "10",
       "height": "10",
-      "text": "Pin P8_15 - Digital 8 - (Pd: digital 33)",
+      "text": "Digital 8 (Pd: 33)",
       "tip": "tooltip"
     },
     {
@@ -77,7 +77,7 @@
       "y": "253",
       "width": "10",
       "height": "10",
-      "text": "Pin P8_18 - Digital 11 - (Pd: digital 36)",
+      "text": "Digital 11 (Pd: 36)",
       "tip": "tooltip"
     },
     {
@@ -86,7 +86,7 @@
       "y": "184",
       "width": "10",
       "height": "10",
-      "text": "Pin P8_28 - Digital 13 - (Pd: digital 38)",
+      "text": "Digital 13 (Pd: 38)",
       "tip": "tooltip"
     },
     {
@@ -95,7 +95,7 @@
       "y": "184",
       "width": "10",
       "height": "10",
-      "text": "Pin P8_27 - Digital 12 - (Pd: digital 37)",
+      "text": "Digital 12 (Pd: 37)",
       "tip": "tooltip"
     },
     {
@@ -104,7 +104,7 @@
       "y": "168",
       "width": "10",
       "height": "10",
-      "text": "Pin P8_30 - Digital 15 - (Pd: digital 40)",
+      "text": "Digital 15 (Pd: 40)",
       "tip": "tooltip"
     },
     {
@@ -113,7 +113,7 @@
       "y": "168",
       "width": "10",
       "height": "10",
-      "text": "Pin P8_29 - Digital 14 - (Pd: digital 39)",
+      "text": "Digital 14 (Pd: 39)",
       "tip": "tooltip"
     },
     {
@@ -122,7 +122,7 @@
       "y": "359",
       "width": "10",
       "height": "10",
-      "text": "Pin P9_02 - GND",
+      "text": "GND",
       "tip": "tooltip"
     },
     {
@@ -131,7 +131,7 @@
       "y": "359",
       "width": "10",
       "height": "10",
-      "text": "Pin P9_01 - GND",
+      "text": "GND",
       "tip": "tooltip"
     },
     {
@@ -140,7 +140,7 @@
       "y": "346",
       "width": "10",
       "height": "10",
-      "text": "Pin P9_03 - 3.3V supply",
+      "text": "3.3V",
       "tip": "tooltip"
     },
     {
@@ -149,7 +149,7 @@
       "y": "346",
       "width": "10",
       "height": "10",
-      "text": "Pin P9_04 - 3.3V supply",
+      "text": "3.3V",
       "tip": "tooltip"
     },
     {
@@ -158,7 +158,7 @@
       "y": "362",
       "width": "10",
       "height": "10",
-      "text": "Pin P8_02 - GND",
+      "text": "GND",
       "tip": "tooltip"
     },
     {
@@ -167,7 +167,7 @@
       "y": "362",
       "width": "10",
       "height": "10",
-      "text": "Pin P8_01 - GND",
+      "text": "GND",
       "tip": "tooltip"
     },
     {
@@ -176,7 +176,7 @@
       "y": "291",
       "width": "10",
       "height": "10",
-      "text": "Pin P9_12 - Digital 6 - (Pd: digital 31)",
+      "text": "Digital 6 (Pd: 31)",
       "tip": "tooltip"
     },
     {
@@ -185,7 +185,7 @@
       "y": "278",
       "width": "10",
       "height": "10",
-      "text": "Pin P9_14 - Digital 7 - (Pd: digital 32)",
+      "text": "Digital 7 (Pd: 32)",
       "tip": "tooltip"
     },
     {
@@ -194,7 +194,7 @@
       "y": "264",
       "width": "10",
       "height": "10",
-      "text": "Pin P9_16 - Digital 10 - (Pd: digital 35)",
+      "text": "Digital 10 (Pd: 35)",
       "tip": "tooltip"
     },
     {
@@ -203,7 +203,7 @@
       "y": "236",
       "width": "10",
       "height": "10",
-      "text": "Analog OUT, Pin 0 - (Pd: [dac~ 17])",
+      "text": "Analog OUT 0 (Pd: [dac~ 17])",
       "tip": "tooltip"
     },
     {
@@ -212,7 +212,7 @@
       "y": "250",
       "width": "10",
       "height": "10",
-      "text": "Analog OUT, Pin 1 - (Pd: [dac~ 18])",
+      "text": "Analog OUT 1 (Pd: [dac~ 18])",
       "tip": "tooltip"
     },
     {
@@ -221,7 +221,7 @@
       "y": "264",
       "width": "10",
       "height": "10",
-      "text": "Analog OUT, Pin 2 - (Pd: [dac~ 19])",
+      "text": "Analog OUT 2 (Pd: [dac~ 19])",
       "tip": "tooltip"
     },
     {
@@ -230,7 +230,7 @@
       "y": "278",
       "width": "10",
       "height": "10",
-      "text": "Analog OUT, Pin 3 - (Pd: [dac~ 20])",
+      "text": "Analog OUT 3 (Pd: [dac~ 20])",
       "tip": "tooltip"
     },
     {
@@ -239,7 +239,7 @@
       "y": "292",
       "width": "10",
       "height": "10",
-      "text": "Analog OUT, Pin 4 - (Pd: [dac~ 21])",
+      "text": "Analog OUT 4 (Pd: [dac~ 21])",
       "tip": "tooltip"
     },
     {
@@ -248,7 +248,7 @@
       "y": "306",
       "width": "10",
       "height": "10",
-      "text": "Analog OUT, Pin 5 - (Pd: [dac~ 22])",
+      "text": "Analog OUT 5 (Pd: [dac~ 22])",
       "tip": "tooltip"
     },
     {
@@ -257,7 +257,7 @@
       "y": "320",
       "width": "10",
       "height": "10",
-      "text": "Analog OUT, Pin 6 - (Pd: [dac~ 23])",
+      "text": "Analog OUT 6 (Pd: [dac~ 23])",
       "tip": "tooltip"
     },
     {
@@ -266,7 +266,7 @@
       "y": "334",
       "width": "10",
       "height": "10",
-      "text": "Analog OUT, Pin 7 - (Pd: [dac~ 24])",
+      "text": "Analog OUT 7 (Pd: [dac~ 24])",
       "tip": "tooltip"
     },
     {
@@ -275,7 +275,7 @@
       "y": "348",
       "width": "10",
       "height": "10",
-      "text": "5V - NEVER use 5V with P8 or P9!",
+      "text": "5V (NEVER use with digital pins!)",
       "tip": "tooltip"
     },
     {
@@ -311,7 +311,7 @@
       "y": "140",
       "width": "10",
       "height": "10",
-      "text": "Analog IN - Pin 7 - (Pd: [adc~ 24])",
+      "text": "Analog IN 7 (Pd: [adc~ 24])",
       "tip": "tooltip"
     },
     {
@@ -320,7 +320,7 @@
       "y": "140",
       "width": "10",
       "height": "10",
-      "text": "Analog IN - Pin 6 - (Pd: [adc~ 23])",
+      "text": "Analog IN 6 (Pd: [adc~ 23])",
       "tip": "tooltip"
     },
     {
@@ -329,7 +329,7 @@
       "y": "140",
       "width": "10",
       "height": "10",
-      "text": "Analog IN - Pin 5 - (Pd: [adc~ 22])",
+      "text": "Analog IN 5 (Pd: [adc~ 22])",
       "tip": "tooltip"
     },
     {
@@ -338,7 +338,7 @@
       "y": "140",
       "width": "10",
       "height": "10",
-      "text": "Analog IN - Pin 4 - (Pd: [adc~ 21])",
+      "text": "Analog IN 4 (Pd: [adc~ 21])",
       "tip": "tooltip"
     },
     {
@@ -347,7 +347,7 @@
       "y": "140",
       "width": "10",
       "height": "10",
-      "text": "Analog IN - Pin 3 - (Pd: [adc~ 20])",
+      "text": "Analog IN 3 (Pd: [adc~ 20])",
       "tip": "tooltip"
     },
     {
@@ -356,7 +356,7 @@
       "y": "140",
       "width": "10",
       "height": "10",
-      "text": "Analog IN - Pin 2 - (Pd: [adc~ 19])",
+      "text": "Analog IN 2 (Pd: [adc~ 19])",
       "tip": "tooltip"
     },
     {
@@ -365,7 +365,7 @@
       "y": "140",
       "width": "10",
       "height": "10",
-      "text": "Analog IN - Pin 1 - (Pd: [adc~ 18])",
+      "text": "Analog IN 1 (Pd: [adc~ 18])",
       "tip": "tooltip"
     },
     {
@@ -374,7 +374,7 @@
       "y": "140",
       "width": "10",
       "height": "10",
-      "text": "Analog IN - Pin 0 - (Pd: [adc~ 17])",
+      "text": "Analog IN 0 (Pd: [adc~ 17])",
       "tip": "tooltip"
     },
     {
@@ -401,7 +401,7 @@
       "y": "432",
       "width": "09",
       "height": "15",
-      "text": "LED - provides system heartbeat blink",
+      "text": "System LED",
       "tip": "tooltip"
     },
     {
@@ -419,7 +419,7 @@
       "y": "432",
       "width": "09",
       "height": "15",
-      "text": "LED - Blinks when Bela program is running",
+      "text": "LED (Blinks when running program)",
       "tip": "tooltip"
     },
     {
@@ -428,7 +428,7 @@
       "y": "402",
       "width": "17",
       "height": "30",
-      "text": "BeagleBone reset button",
+      "text": "Reset button",
       "tip": "tooltip"
     },
     {
@@ -464,7 +464,7 @@
       "y": "4",
       "width": "31",
       "height": "40",
-      "text": "Speaker out [R] (disabled)",
+      "text": "Speaker out RIGHT (disabled)",
       "tip": "tooltip"
     },
     {
@@ -473,7 +473,7 @@
       "y": "4",
       "width": "31",
       "height": "40",
-      "text": "Speaker out [L] (disabled)",
+      "text": "Speaker out LEFT (disabled)",
       "tip": "tooltip"
     },
     {
@@ -617,7 +617,7 @@
       "y": "-149",
       "width": "9",
       "height": "9",
-      "text": "OUT 7 - (Pd:[dac~ 8])",
+      "text": "OUT 7 (Pd:[dac~ 8])",
       "tip": "tooltip"
     },
     {
@@ -626,7 +626,7 @@
       "y": "-149",
       "width": "9",
       "height": "9",
-      "text": "OUT 6 - (Pd:[dac~ 7])",
+      "text": "OUT 6 (Pd:[dac~ 7])",
       "tip": "tooltip"
     },
     {
@@ -644,7 +644,7 @@
       "y": "-149",
       "width": "9",
       "height": "9",
-      "text": "OUT 4 - (Pd:[dac~ 5])",
+      "text": "OUT 4 (Pd:[dac~ 5])",
       "tip": "tooltip"
     },
     {
@@ -653,7 +653,7 @@
       "y": "-149",
       "width": "9",
       "height": "9",
-      "text": "OUT 5 - (Pd:[dac~ 6])",
+      "text": "OUT 5 (Pd:[dac~ 6])",
       "tip": "tooltip"
     },
     {
@@ -671,7 +671,7 @@
       "y": "-149",
       "width": "9",
       "height": "9",
-      "text": "OUT 2 - (Pd:[dac~ 3])",
+      "text": "OUT 2 (Pd:[dac~ 3])",
       "tip": "tooltip"
     },
     {
@@ -680,7 +680,7 @@
       "y": "-149",
       "width": "9",
       "height": "9",
-      "text": "OUT 3 - (Pd:[dac~ 4])",
+      "text": "OUT 3 (Pd:[dac~ 4])",
       "tip": "tooltip"
     },
     {
@@ -698,7 +698,7 @@
       "y": "-149",
       "width": "9",
       "height": "9",
-      "text": "OUT 0 - (Pd:[dac~ 1])",
+      "text": "OUT 0 (Pd:[dac~ 1])",
       "tip": "tooltip"
     },
     {
@@ -707,7 +707,7 @@
       "y": "-149",
       "width": "9",
       "height": "9",
-      "text": "OUT 1 - (Pd:[dac~ 2])",
+      "text": "OUT 1 (Pd:[dac~ 2])",
       "tip": "tooltip"
     },
     {
@@ -725,7 +725,7 @@
       "y": "-149",
       "width": "9",
       "height": "9",
-      "text": "IN 0 - (Pd:[adc~ 1])",
+      "text": "IN 0 (Pd:[adc~ 1])",
       "tip": "tooltip"
     },
     {
@@ -734,7 +734,7 @@
       "y": "-149",
       "width": "9",
       "height": "9",
-      "text": "IN 1 - (Pd:[adc~ 2])",
+      "text": "IN 1 (Pd:[adc~ 2])",
       "tip": "tooltip"
     },
     {
@@ -752,7 +752,7 @@
       "y": "-186",
       "width": "9",
       "height": "9",
-      "text": "IN 2 - (Pd:[adc~ 3])",
+      "text": "IN 2 (Pd:[adc~ 3])",
       "tip": "tooltip"
     },
     {
@@ -761,7 +761,7 @@
       "y": "-186",
       "width": "9",
       "height": "9",
-      "text": "IN 3 - (Pd:[adc~ 4])",
+      "text": "IN 3 (Pd:[adc~ 4])",
       "tip": "tooltip"
     },
     {
@@ -779,7 +779,7 @@
       "y": "-228",
       "width": "9",
       "height": "9",
-      "text": "OUT 14 - (Pd:[dac~ 15])",
+      "text": "OUT 14 (Pd:[dac~ 15])",
       "tip": "tooltip"
     },
     {
@@ -788,7 +788,7 @@
       "y": "-228",
       "width": "9",
       "height": "9",
-      "text": "OUT 15 - (Pd:[dac~ 16])",
+      "text": "OUT 15 (Pd:[dac~ 16])",
       "tip": "tooltip"
     },
     {
@@ -806,7 +806,7 @@
       "y": "-228",
       "width": "9",
       "height": "9",
-      "text": "OUT 12 - (Pd:[dac~ 13])",
+      "text": "OUT 12 (Pd:[dac~ 13])",
       "tip": "tooltip"
     },
     {
@@ -815,7 +815,7 @@
       "y": "-228",
       "width": "9",
       "height": "9",
-      "text": "OUT 13 - (Pd:[dac~ 14])",
+      "text": "OUT 13 (Pd:[dac~ 14])",
       "tip": "tooltip"
     },
     {
@@ -833,7 +833,7 @@
       "y": "-228",
       "width": "9",
       "height": "9",
-      "text": "OUT 10 - (Pd:[dac~ 11])",
+      "text": "OUT 10 (Pd:[dac~ 11])",
       "tip": "tooltip"
     },
     {
@@ -842,7 +842,7 @@
       "y": "-228",
       "width": "9",
       "height": "9",
-      "text": "OUT 11 - (Pd:[dac~ 12])",
+      "text": "OUT 11 (Pd:[dac~ 12])",
       "tip": "tooltip"
     },
     {
@@ -860,7 +860,7 @@
       "y": "-228",
       "width": "9",
       "height": "9",
-      "text": "OUT 8 - (Pd:[dac~ 9])",
+      "text": "OUT 8 (Pd:[dac~ 9])",
       "tip": "tooltip"
     },
     {
@@ -869,7 +869,7 @@
       "y": "-228",
       "width": "9",
       "height": "9",
-      "text": "OUT 9 - (Pd:[dac~ 10])",
+      "text": "OUT 9 (Pd:[dac~ 10])",
       "tip": "tooltip"
     },
     {
@@ -887,7 +887,7 @@
       "y": "-228",
       "width": "9",
       "height": "9",
-      "text": "IN 4 - (Pd:[adc~ 5])",
+      "text": "IN 4 (Pd:[adc~ 5])",
       "tip": "tooltip"
     },
     {
@@ -896,7 +896,7 @@
       "y": "-228",
       "width": "9",
       "height": "9",
-      "text": "IN 5 - (Pd:[adc~ 6])",
+      "text": "IN 5 (Pd:[adc~ 6])",
       "tip": "tooltip"
     },
     {
@@ -914,7 +914,7 @@
       "y": "-266",
       "width": "9",
       "height": "9",
-      "text": "IN 6 - (Pd:[adc~ 7])",
+      "text": "IN 6 (Pd:[adc~ 7])",
       "tip": "tooltip"
     },
     {
@@ -923,7 +923,7 @@
       "y": "-266",
       "width": "9",
       "height": "9",
-      "text": "IN 7 - (Pd:[adc~ 8])",
+      "text": "IN 7 (Pd:[adc~ 8])",
       "tip": "tooltip"
     },
     {
@@ -941,7 +941,7 @@
       "y": "251",
       "width": "10",
       "height": "10",
-      "text": "I2C Power - 3.3V",
+      "text": "I2C 3.3V",
       "tip": "tooltip"
     },
     {
