--- a/IDE/package.json
+++ b/IDE/package.json
@@ -45,6 +45,6 @@
     "mime": "^2.3.1",
     "pidtree": "^0.3.0",
     "read-chunk": "^2.1.0",
-    "socket.io": "^2.1.0"
+    "socket.io": "@2.0.3"
   }
 }
