Faster build. Closes https://github.com/BelaPlatform/Bela-private/#61
Only scanning libraries when linking time comes, in a separate Makefile.linkbela .
-save-temps=obj to avoid double pre-processing of files.
detectlibraries.sh now plainly overwrites Makefile.inc to make sure it is "up to date"
(i.e.: it is newer than the .i/.ii files), so that the main Makefile avoids rebuilding it
every time.
Outstanding issue: if a project is already built, editing a library .cpp/.c file will not
cause the corresponding object to be rebuild (see https://github.com/BelaPlatform/Bela-private/issues/81 )

--- a/Makefile.libraries
+++ b/Makefile.libraries
@@ -4,6 +4,7 @@
 LIBRARY_CC ?= clang
 LIBRARY_CXX ?= clang++
 .DEFAULT_GOAL := all
+AT?=@
 
 #TODO: these variables should actually be conditional and/or shared with the Base Makefile
 # although they are not really needed if this Makefile is called from the main Makefile
@@ -39,11 +40,11 @@ LIBRARY_OBJS := $(LIBRARY_OBJS) $(LIBRARY_CS:$(LIBRARY_DIR)/%.c=$(LIBRARY_DIR)/b
 
 all: $(LIBRARY_OBJS)
 clean:
-	rm -rf $(LIBRARY_OBJS)
+	$(AT) rm -rf $(LIBRARY_OBJS)
 
 $(LIBRARY_BUILD_DIR)/%.o: $(LIBRARY_DIR)/%.c
-	$(LIBRARY_CC) -c $< -o $@ $(LIBRARY_CPPFLAGS) $(LIBRARY_CFLAGS)
+	$(AT) $(LIBRARY_CC) -c $< -o $@ $(LIBRARY_CPPFLAGS) $(LIBRARY_CFLAGS)
 $(LIBRARY_BUILD_DIR)/%.o: $(LIBRARY_DIR)/%.cpp
-	$(LIBRARY_CXX) -c $< -o $@ $(LIBRARY_CPPFLAGS) $(LIBRARY_CXXFLAGS)
+	$(AT) $(LIBRARY_CXX) -c $< -o $@ $(LIBRARY_CPPFLAGS) $(LIBRARY_CXXFLAGS)
 $(MKFILE_COMPILE):
-	resources/tools/detectlibraries.sh --library $(LIBRARY)
+	$(AT) resources/tools/detectlibraries.sh --library $(LIBRARY)
