--- a/IDE/package.json
+++ b/IDE/package.json
@@ -33,6 +33,7 @@
     "gulp-typescript": "^4.0.2",
     "mocha": "^5.1.1",
     "mock-fs": "^4.5.0",
+    "multer": "^1.4.2",
     "sinon": "^5.0.7",
     "typescript": "^2.8.3"
   },
