--- a/IDE/package.json
+++ b/IDE/package.json
@@ -21,6 +21,7 @@
     "@types/mime": "^2.0.0",
     "@types/mocha": "^5.2.0",
     "@types/mock-fs": "^3.6.30",
+    "@types/multer": "^1.3.9",
     "@types/node": "^8.10.14",
     "@types/read-chunk": "^2.1.0",
     "@types/sinon": "^4.3.3",
