--- a/Makefile.libraries
+++ b/Makefile.libraries
@@ -1,11 +1,11 @@
 # This should be called from the Bela folder, with 
 # make -f Makefile.libraries LIBRARY=libraryname
 # set defaults
-CC ?= clang
-CXX ?= clang++
+CC := clang
+CXX := clang++
 LIBRARY_CC ?= $(CC)
 LIBRARY_CXX ?= $(CXX)
-.DEFAULT_GOAL := all
+.DEFAULT_GOAL := library
 AT?=@
 
 #TODO: these variables should actually be conditional and/or shared with the Base Makefile
@@ -27,6 +27,7 @@ LIBRARY_CPPFLAGS = $(DEFAULT_XENOMAI_CFLAGS) -I$(BELA_DIR) -I$(BELA_DIR)/include
 # the above default variables may be modified by the Makefile included here:
 MKFILE_COMPILE := libraries/$(LIBRARY)/build/Makefile.compile
 -include $(MKFILE_COMPILE)
+-include libraries/*/build/*.d
 
 LIBRARY_DIR := libraries/$(LIBRARY)
 LIBRARY_BUILD_DIR := $(LIBRARY_DIR)/build
@@ -39,8 +40,9 @@ LIBRARY_OBJS := $(LIBRARY_OBJS) $(LIBRARY_CS:$(LIBRARY_DIR)/%.c=$(LIBRARY_DIR)/b
 #LIBRARY_OBJS := $(LIBRARY_OBJS) $(LIBRARY_FILES:$(LIBRARY_DIR)/%.c=$(LIBRARY_DIR)/build/%.o)
 #$(warning FILES: $(LIBRARY_FILES))
 #$(warning OBJS: $(LIBRARY_OBJS))
-
-all: $(LIBRARY_OBJS)
+all:
+	 for a in libraries/*; do A=`basename $$a`; echo $$A; $(MAKE) -f Makefile.libraries LIBRARY=$$A --no-print-directory; done
+library: $(LIBRARY_OBJS)
 clean:
 	$(AT) rm -rf $(LIBRARY_OBJS)
 
