pin-diagram: added I2C pins to all

--- a/IDE/public/belaDiagram/json/data_CtagBeastBela.json
+++ b/IDE/public/belaDiagram/json/data_CtagBeastBela.json
@@ -383,7 +383,25 @@
       "y": "14",
       "width": "20",
       "height": "30",
-      "text": "x",
+      "text": "Bela Button",
+      "tip": "tooltip"
+    },
+    {
+      "elemclass": "powerIn",
+      "x": "270",
+      "y": "205",
+      "width": "10",
+      "height": "10",
+      "text": "I2C-1 SCL (P9.24)",
+      "tip": "tooltip"
+    },
+    {
+      "elemclass": "powerIn",
+      "x": "270",
+      "y": "192",
+      "width": "10",
+      "height": "10",
+      "text": "I2C-1 SDA (P9.26)",
       "tip": "tooltip"
     },
     {
@@ -932,7 +950,7 @@
       "y": "204",
       "width": "38",
       "height": "60",
-      "text": "I2C",
+      "text": "I2C-1 Header",
       "tip": "tooltip"
     },
     {
@@ -941,7 +959,7 @@
       "y": "251",
       "width": "10",
       "height": "10",
-      "text": "I2C 3.3V",
+      "text": "3.3V",
       "tip": "tooltip"
     },
     {
@@ -950,7 +968,7 @@
       "y": "237",
       "width": "10",
       "height": "10",
-      "text": "SCL (clock)",
+      "text": "I2C-1 SCL",
       "tip": "tooltip"
     },
     {
@@ -959,7 +977,7 @@
       "y": "223",
       "width": "10",
       "height": "10",
-      "text": "SDA (data)",
+      "text": "I2C-1 SDA",
       "tip": "tooltip"
     },
     {
@@ -968,7 +986,7 @@
       "y": "209",
       "width": "10",
       "height": "10",
-      "text": "I2C GND",
+      "text": "GND",
       "tip": "tooltip"
     }
   ]
