--- a/IDE/public/belaDiagram/json/data_ctag_BEAST.json
+++ b/IDE/public/belaDiagram/json/data_ctag_BEAST.json
@@ -302,7 +302,7 @@
       "y": "22",
       "width": "20",
       "height": "28",
-      "text": "Shutdown button",
+      "text": "Bela Button",
       "tip": "tooltip"
     },
     {
