--- a/IDE/package.json
+++ b/IDE/package.json
@@ -48,6 +48,7 @@
     "multer": "^1.4.2",
     "pidtree": "^0.3.0",
     "read-chunk": "^2.1.0",
+    "await-lock": "",
     "socket.io": "2.0.3"
   }
 }
