--- a/IDE/package.json
+++ b/IDE/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/archiver": "^2.1.1",
     "@types/chai": "^4.1.3",
+    "@types/chokidar": "^1.7.5",
     "@types/es6-shim": "^0.31.37",
     "@types/express": "^4.11.1",
     "@types/file-type": "^5.2.1",
