Makefile: now dependencies will be correctly resolved even when building with distcc. This means changes to .h files will automatically trigger a rebuild of the .c/.cpp file including them. Closes https://github.com/BelaPlatform/Bela/issues/354.
See [here](https://github.com/distcc/distcc/issues/62).
But also, the flag we had until 48ab5804900c83cf9477f2a0732b2dc91d9f5b7a was broken (it was supposed to be -MT"" instead of -MT""

--- a/Makefile.libraries
+++ b/Makefile.libraries
@@ -22,7 +22,7 @@ SYSTEM_SPECIFIC_MAKEFILE=/tmp/BelaMakefile.inc
 include $(SYSTEM_SPECIFIC_MAKEFILE)
 $(SYSTEM_SPECIFIC_MAKEFILE):
 	make lib
-LIBRARY_CPPFLAGS = $(DEFAULT_XENOMAI_CFLAGS) -I$(BASE_DIR) -I$(BASE_DIR)/include -DNDEBUG -D$(BELA_USE_DEFINE) -I$(BASE_DIR)/resources/$(DEBIAN_VERSION)/include -MMD -MP -MF"$(@:%.o=%.d)"
+LIBRARY_CPPFLAGS = $(DEFAULT_XENOMAI_CFLAGS) -I$(BASE_DIR) -I$(BASE_DIR)/include -DNDEBUG -D$(BELA_USE_DEFINE) -I$(BASE_DIR)/resources/$(DEBIAN_VERSION)/include -MMD -MP -MT"$(@)" -MF"$(@:%.o=%.d)"
 #
 # the above default variables may be modified by the Makefile included here:
 MKFILE_COMPILE := libraries/$(LIBRARY)/build/Makefile.compile
