Makefile: removed legacy include of resources/$(DEBIAN_VERSION)

--- a/Makefile.libraries
+++ b/Makefile.libraries
@@ -11,7 +11,6 @@ AT?=@
 #TODO: these variables should actually be conditional and/or shared with the Base Makefile
 # although they are not really needed if this Makefile is called from the main Makefile
 BELA_USE_DEFINE:=BELA_USE_RTDM
-DEBIAN_VERSION :=stretch
 BASE_DIR:=$(shell dirname $(realpath $(lastword $(MAKEFILE_LIST))))
 DEFAULT_COMMON_FLAGS ?= -O3 -g -march=armv7-a -mtune=cortex-a8 -mfloat-abi=hard -mfpu=neon -ftree-vectorize -ffast-math
 DEFAULT_COMMON_FLAGS += -fPIC # ensure it's always set
@@ -24,7 +23,7 @@ SYSTEM_SPECIFIC_MAKEFILE=/tmp/BelaMakefile-$(strip $(BELA_RT_BACKEND)).inc
 include $(SYSTEM_SPECIFIC_MAKEFILE)
 $(SYSTEM_SPECIFIC_MAKEFILE):
 	make lib
-LIBRARY_CPPFLAGS = $(DEFAULT_XENOMAI_CFLAGS) -I$(BASE_DIR) -I$(BASE_DIR)/include -DNDEBUG -D$(BELA_USE_DEFINE) -I$(BASE_DIR)/resources/$(DEBIAN_VERSION)/include -MMD -MP -MT"$(@)" -MF"$(@:%.o=%.d)"
+LIBRARY_CPPFLAGS = $(DEFAULT_XENOMAI_CFLAGS) -I$(BASE_DIR) -I$(BASE_DIR)/include -DNDEBUG -D$(BELA_USE_DEFINE) -MMD -MP -MT"$(@)" -MF"$(@:%.o=%.d)"
 #
 # the above default variables may be modified by the Makefile included here:
 MKFILE_COMPILE := libraries/$(LIBRARY)/build/Makefile.compile
