--- a/Makefile.libraries
+++ b/Makefile.libraries
@@ -57,10 +57,12 @@ cleanall:
 	$(AT) rm -rf libraries/*/build
 
 $(LIBRARY_BUILD_DIR)/%.o: $(LIBRARY_DIR)/%.c
+	@mkdir -p $(LIBRARY_BUILD_DIR)
 	$(AT) $(LIBRARY_CC) -c $< -o $@ $(LIBRARY_CPPFLAGS) $(LIBRARY_CFLAGS)
 $(LIBRARY_BUILD_DIR)/%.o: $(LIBRARY_DIR)/%.cpp
+	@mkdir -p $(LIBRARY_BUILD_DIR)
 	$(AT) $(LIBRARY_CXX) -c $< -o $@ $(LIBRARY_CPPFLAGS) $(LIBRARY_CXXFLAGS)
 ifneq ($(LIBRARY),)
 $(MKFILE_COMPILE):
-	$(AT) resources/tools/detectlibraries.sh --library $(LIBRARY)
+	$(AT) resources/tools/detectlibraries.sh --library $(LIBRARY) >/dev/null
 endif
